# AUVC

./: .gitignore  README.md  build.sh  compile_flags.txt  run.sh
AUVC/: CMakeLists.txt  controller.cc
labs/src/: array  array.c  test.h
model/sub/: sub.xml
roverPhysics/: roverPhysics.cc
server-client/: Makefile  README.md  common.h  image_client.c  image_server.c  video_client.c  video_server.c
simulate/: simulate.cc
tests/: test_opencv.cxx
